@@ -2,7 +2,15 @@
 \title{News for \R Package \pkg{copula}}% MM: look into ../svn-log-from.all
 \newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
 
-\section{Changes in version 0.999-12 (2014-..-..)}{
+\section{Changes in version 0.999-13 (2015-..-..)}{
+  \itemize{
+    \item New demo on tail compatibility
+    \item lsum(): also work for vectors and when result is zero,
+    i.e. \code{log(0) == -Inf}.
+  }
+}
+
+\section{Changes in version 0.999-12 (2014-10-01)}{
   \itemize{
     \item fix bug which did not allow to set non-default
     \code{optim.method} in \code{gofCopula()}.
